Version 2.10.0.9 (dev) not released yet
=======================================

**Incompatible changes**
------------------------
- Add width to struct zint_vector_circle
  NOTE: backward incompatible drawing of MaxiCode finder (bullseye)

Changes
-------
- RMQR: add ECI support
- CODE93: don't display check characters in HRT (as per standard Figure B1)
- GUI: separate out MAXICODE Structured Carrier Message fields

Bugs
----
- GUI/CLI: fix dev version test
- library.c: error_tag(): check error_number < ZINT_ERROR on WARN_FAIL_ALL
- vector.c: enforce minimum scale >= 0.1 and allow in GUI
- Suppress some pedantic warnings, props codemonkey82 (#204)
- gs1.c: Allow 0-length AI data if GS1NOCHECK_MODE, props codemonkey82 (#204)


Version 2.10.0 2021-08-14
=========================

**Incompatible changes**
------------------------
- Add halign (horizontal align) to struct zint_vector_string
  NOTE: backward incompatible text drawing for UPC/EAN
- Change height and row_height array to floats
  NOTE: may cause changes in heights

Changes
-------
- Move project history/version from manual.txt and backend/README into this file
- Command line switches -d or -i for code data may now be at any position.
- Add rotation for vector formats
- Change double to float for performance in many internal places
- Ticket 197: optimize raster scaling for 0.5 substeps;
  ignore raster scaling < 0.5 as pixels lost.
- Ticket 197: add output option to bypass time-intensive buffer_plot()
  (OUT_BUFFER_INTERMEDIATE)
- Reduce BMP size by using 1 bit per pixel (except Ultracode)
- New warn_level field, WARN_FAIL_ALL
- Add GS1NOCHECK_MODE to input_mode (note was ZPL compatibility mode
  WARN_ZPL_COMPAT to warn_level)
- Remove version info from zint.h and put in zintconfig.h via zintconfig.h.in
- Add ZBarcode_Cap()
- Add GUI symbology filter, separate settings for each symbology
- Require cmake 3.5, use PNG::PNG and add Qt6 build option