@@ -7,6 +7,7 @@
         <file>grpC25.ui</file>
         <file>grpC39.ui</file>
         <file>grpC49.ui</file>
+        <file>grpC93.ui</file>
         <file>grpChannel.ui</file>
         <file>grpCodabar.ui</file>
         <file>grpCodablockF.ui</file>
